--- a/src/Layouts/Header/header.css
+++ b/src/Layouts/Header/header.css
@@ -1,13 +1,10 @@
-.logo {
-    width: 150px;
-}
-
-.brand-nav {
-    position: fixed;
+.hmain {
+    padding-top: 110px;
     width: 100%;
     min-height: 110px;
-    background-color: blanchedalmond;
+    background-color: beige;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
