--- a/src/Layouts/Header/header.css
+++ b/src/Layouts/Header/header.css
@@ -1,10 +1,30 @@
 .hmain {
     padding-top: 120px;
+    padding-bottom: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
     width: 100%;
-    min-height: 110px;
+    min-height: 270px;
     background-color: beige;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+}
+
+h2 {
+    margin: 17.5px 0;
+    font-weight: 400;
+    font-size: 36px;
+    color: #515357;
+    text-transform: none;
+    letter-spacing: 0px;
+}
+
+.subText {
+    display: inline-block;
+    font-size: 14px;
+    margin-right: 10px;
+    color: #808080;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
