captcha bar visible

--- a/src/Layouts/Brand/brand.css
+++ b/src/Layouts/Brand/brand.css
@@ -3,7 +3,7 @@
 }
 
 .navBody {
-    background-color: bisque;
+    background-color: white;
     margin: 0px auto;
     width: 100%;
     padding: 0 30px;
