--- a/src/Layouts/Header/header.css
+++ b/src/Layouts/Header/header.css
@@ -5,7 +5,7 @@
     padding-left: 30px;
     width: 100%;
     min-height: 270px;
-    background-color: beige;
+    background-color: white;
     display: flex;
     flex-direction: column;
 }
