--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    text-align: center;
+    text-align: start;
     /* font: normal 400 16px/1.8 Lato; */
     overflow: hidden;
     background-color: #f9f9f9;
